src/test/resources/semantic/custom/reject/addInvalidTypesArray2.ul
void main() {
}

void foo() {
    boolean[3] array1;
    int[3] array2;
    boolean[3] result;
    
    result = array1 + array2;
}
